test/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
out/test/spec/block.wast:159: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:163: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:167: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:171: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:176: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:182: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:188: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:194: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:200: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:207: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:213: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:220: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:226: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:232: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:238: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:245: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:251: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:258: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:264: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:273: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:279: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:285: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:293: assert_malformed passed:
  out/test/spec/block/block.23.wat:1:17: error: unexpected label "$l"
  (func block end $l)
                  ^^
out/test/spec/block.wast:297: assert_malformed passed:
  out/test/spec/block/block.24.wat:1:20: error: mismatching label "$a" != "$l"
  (func block $a end $l)
                     ^^
38/38 tests passed.
;;; STDOUT ;;)
